--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
 			<version>6.4.4.Final</version> <!-- Match your Hibernate version -->
 			<scope>provided</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.9</version>
+		</dependency>
 	</dependencies>
 
 	<build>
